# MLHW1

./: README.md  output.csv  pyproject.toml  trader.py
